# sumimasen

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE  go.mod  go.sum
android/bolg/: build.gradle
android/bolg/app/: build.gradle
android/bolg/app/src/androidTest/java/com/example/bolg/: ExampleInstrumentedTest.kt
android/bolg/app/src/main/: AndroidManifest.xml
android/bolg/app/src/main/java/bolg_developers/sumimasen/api/: Empty.java  EmptyOrBuilder.java  EmptyProto.java  SumimasenGrpc.java  SumimasenProto.java  SumimasenRequest.java  SumimasenRequestOrBuilder.java  SumimasenResponse.java  SumimasenResponseOrBuilder.java
android/bolg/app/src/main/java/com/example/bolg/: MainActivity.kt  SumimasenGrpctask.kt
android/bolg/app/src/main/proto/: sumimasen.proto
android/bolg/app/src/main/res/layout/: activity_main.xml
android/bolg/app/src/main/res/values/: strings.xml
android/bolg/gradle/wrapper/: gradle-wrapper.properties
api/: BUILD.bazel  empty.pb.go  empty.proto  sumimasen.pb.go  sumimasen.proto
hack/: copy_android_grpc_file.sh  copy_go_grpc_file.sh
scripts/: protogen.py
server/: BUILD.bazel  main.go
server/app/: app.go
server/app/controllers/: config.go  sumimasen.go
server/app/services/: config.go  sumimasen.go
server/cmd/: BUILD.bazel
server/config/: BUILD.bazel  config.go
server/controllers/: BUILD.bazel  config.go  sumimasen.go
server/proto/: sumimasen.pb.go
server/services/: BUILD.bazel  config.go  suimasen.go
