load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "api_proto",
    srcs = [
        "empty.proto",
        "sumimasen.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "api_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/bolg-developers/sumimasen/api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":api_go_proto"],
    importpath = "github.com/bolg-developers/sumimasen/api",
    visibility = ["//visibility:public"],
)

load("@build_stack_rules_proto//go:go_grpc_compile.bzl", "go_grpc_compile")

go_grpc_compile(
    name = "go_grpc",
    deps = [":api_proto"],
)

load("@build_stack_rules_proto//android:android_grpc_compile.bzl", "android_grpc_compile")

android_grpc_compile(
    name = "android_grpc",
    deps = [":api_proto"],
)
