load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bolg-developers/sumimasen/server",
    visibility = ["//visibility:private"],
    deps = [
        "//api:go_default_library",
        "//server/config:go_default_library",
        "//server/controllers:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "server",
    data = [".env"],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
