load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "sumimasen.go",
    ],
    importpath = "github.com/bolg-developers/sumimasen/server/controllers",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//server/services:go_default_library",
    ],
)
